crates/figue/tests/integration/snapshots/main__integration__deser_errors__deser_error_cli_override_wrong_type.snap
---
source: crates/figue/tests/integration/deser_errors.rs
expression: "$crate :: common :: strip_ansi(& report.to_string())"
---
Error: failed to parse "oops" as u16
   ╭─[ <cli>:1:15 ]
   │
 1 │ --config.port oops --config.host localhost
   │               ──┬─  
   │                 ╰─── failed to parse "oops" as u16
───╯
